src/test/deca/context/valid/provided/bizzarre.deca
{
    int i = 10;
    while (i<0){
        print(100000);
    }
    print(1);
}