src/test/deca/context/invalid/sansObjet/nonBoolWhile.deca
{
    while (1.5) {
        print("Erreur non detectée");
    }
}